# magpie

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.cn.md  README.md  pyproject.toml  rules.sample.json
.github/workflows/: docker-image.yml
.github/workflows /: docker-image.yml
magpie/: __main__.py  core.py  message.py  server.py
tests/: test_core.py
